--- a/ecommerce/Dockerfile
+++ b/ecommerce/Dockerfile
@@ -1,19 +1,13 @@
 # Use official OpenJDK as base image
 FROM openjdk:17-jdk-slim
 
-# Set working directory inside the container
-WORKDIR /app
 
 # Copy Maven wrapper & pom.xml first (for dependency caching)
-COPY mvnw .
-COPY .mvn .mvn
 COPY pom.xml .
-
+COPY src ./src
 # Download dependencies (this makes future builds faster)
 RUN ./mvnw dependency:go-offline
 
-# Copy the source code
-COPY src src
 
 # Build the application
 RUN ./mvnw clean package -DskipTests
